<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sarah.datos.MainActivity">


    <EditText
        android:id="@+id/edtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_usuario"

        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <EditText
        android:id="@+id/edtComent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coment_usuario"

        android:layout_below="@+id/edtCorreo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/edtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_usuario"

        android:layout_below="@+id/edtNumero"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/edtNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario"

        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:id="@+id/button"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="irSiguiente"
        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label_set"

        android:layout_alignBaseline="@+id/buttonCalen"
        android:layout_alignBottom="@+id/buttonCalen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/date_selected"

        />

    <Button
        android:id="@+id/buttonCalen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:text="@string/date_button_set"

        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />





</RelativeLayout>
