<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sarah.datos.MainActivity2">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_secondAct"
        android:textSize="@dimen/text2size_titulo"
        android:id="@+id/Secontext"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_secondNumber"
        android:textSize="@dimen/text2size_titulo"
        android:id="@+id/secondnumero"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_secondCorre"
        android:textSize="@dimen/text2size_titulo"
        android:id="@+id/secondcorreo"
        android:layout_below="@+id/secondnumero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt_secondComent"
        android:textSize="@dimen/text2size_titulo"
        android:id="@+id/seconcoment"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/secondcorreo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />





    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:id="@+id/button"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="regresar"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:id="@+id/textView"
        android:textSize="@dimen/activity_letras"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/date_view_set"

        android:layout_below="@+id/Secontext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
